--- a/gb/19/10/24/n11608607.md
+++ b/gb/19/10/24/n11608607.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fznrt2606/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fznrt2606/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fznrt2606/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fznrt2606/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽约另有比“龙吟”更适合华埠的地标雕塑</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年10月24日讯】（大纪元记者黄小堂美国<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）纽约市交通局（DOT）、范阿伦建筑学院（Van Alen Institute of Architecture）和华埠共同发展机构两年前共同发起的“唐人街之道”（Gateway to Chinatown）<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E5%9C%B0%E6%A0%87.md#1">地标</a>雕塑，7月公布由澳洲华裔建筑师Lindy Lee设计的“<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E9%BE%99%E5%90%9F.md#1">龙吟</a>”（The Dragon’s Roar）获选，曼哈顿华埠第三社区委员会（Community Board 3）委员陈家龄日前投稿当地西媒Bowery Boogie表达观点，认为该设计无法代表华埠和当地华人的文化，只是吸引观光客的建筑，另有其它的设计提案更适合三角地背后代表的华埠历史和文化底蕴。</p>
-<figure id="11608612" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/10/a1179da351fbbf226bb620f1ec241058-450x300.jpg" alt="图为“唐人街之道”地标雕塑的位置，在坚尼路（Canal St.）和巴士打街（Baxter St.）交口处的三角地带。" width="500" /><figcaption class="wp-caption-text">图为“唐人街之道”<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E5%9C%B0%E6%A0%87.md#1">地标</a>雕塑的位置，在坚尼路（Canal St.）和巴士打街（Baxter St.）交口处的三角地带。（Kwong Von Glinow Design Office提供）</figcaption></figure>
-<figure id="11608611" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/10/5d972dd882e50dfc4d4313aaa7cbdcfe-450x253.jpg" alt="图为“龙吟”地标雕塑引用的概念方法（conceptual approach）示意图。采用意大利钟楼（Italian Campanile）和中国鼓楼（Chinese Drum Tower）的概念。" width="500" /><figcaption class="wp-caption-text">图为“<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E9%BE%99%E5%90%9F.md#1">龙吟</a>”地标雕塑引用的概念方法（conceptual approach）示意图。采用意大利钟楼（Italian Campanile）和中国鼓楼（Chinese Drum Tower）的概念。（Kwong Von Glinow Design Office提供）</figcaption></figure>
-<figure id="11608609" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/10/0fc06e649f51676b17cd67c1317c1d2d-450x248.jpg" alt="华埠居民表示，设计师Kwong Von Glinow的“龙凤”（Dragon Phoenix）作品，更能体现华埠的文化特征。" width="500" /><figcaption class="wp-caption-text">华埠居民表示，设计师Kwong Von Glinow的“龙凤”（Dragon Phoenix）作品，更能体现华埠的文化特征。（Kwong Von Glinow Design Office提供）</figcaption></figure>
-<p>“唐人街之道”地标雕塑位置在坚尼路（Canal St.）和巴士打街（Baxter St.）交口处的三角地，广征设计作品，试图以地标建筑带动当地经济和观光发展。日前<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>市交通局城市设计主任Neil Gagliardi介绍，该项目征稿有五点要求，包括成为华埠地标、表现移民文化、提供社区资讯、提供绿地及成为社交场所等。</p>
+<p>【大纪元2019年10月24日讯】（大纪元记者黄小堂美国<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）纽约市交通局（DOT）、范阿伦建筑学院（Van Alen Institute of Architecture）和华埠共同发展机构两年前共同发起的“唐人街之道”（Gateway to Chinatown）<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%9C%B0%E6%A0%87.md#1">地标</a>雕塑，7月公布由澳洲华裔建筑师Lindy Lee设计的“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%BE%99%E5%90%9F.md#1">龙吟</a>”（The Dragon’s Roar）获选，曼哈顿华埠第三社区委员会（Community Board 3）委员陈家龄日前投稿当地西媒Bowery Boogie表达观点，认为该设计无法代表华埠和当地华人的文化，只是吸引观光客的建筑，另有其它的设计提案更适合三角地背后代表的华埠历史和文化底蕴。</p>
+<figure id="11608612" aria-describedby="caption-11608612" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/10/a1179da351fbbf226bb620f1ec241058-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/10/a1179da351fbbf226bb620f1ec241058-450x300.jpg" alt="图为“唐人街之道”地标雕塑的位置，在坚尼路（Canal St.）和巴士打街（Baxter St.）交口处的三角地带。" width="500" /></a><figcaption id="caption-11608612" class="wp-caption-text">图为“唐人街之道”<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%9C%B0%E6%A0%87.md#1">地标</a>雕塑的位置，在坚尼路（Canal St.）和巴士打街（Baxter St.）交口处的三角地带。（Kwong Von Glinow Design Office提供）</figcaption></figure>
+<figure id="11608611" aria-describedby="caption-11608611" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/10/5d972dd882e50dfc4d4313aaa7cbdcfe-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/10/5d972dd882e50dfc4d4313aaa7cbdcfe-450x253.jpg" alt="图为“龙吟”地标雕塑引用的概念方法（conceptual approach）示意图。采用意大利钟楼（Italian Campanile）和中国鼓楼（Chinese Drum Tower）的概念。" width="500" /></a><figcaption id="caption-11608611" class="wp-caption-text">图为“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%BE%99%E5%90%9F.md#1">龙吟</a>”地标雕塑引用的概念方法（conceptual approach）示意图。采用意大利钟楼（Italian Campanile）和中国鼓楼（Chinese Drum Tower）的概念。（Kwong Von Glinow Design Office提供）</figcaption></figure>
+<figure id="11608609" aria-describedby="caption-11608609" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/10/0fc06e649f51676b17cd67c1317c1d2d-450x248.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2019/10/0fc06e649f51676b17cd67c1317c1d2d-450x248.jpg" alt="华埠居民表示，设计师Kwong Von Glinow的“龙凤”（Dragon Phoenix）作品，更能体现华埠的文化特征。" width="500" /></a><figcaption id="caption-11608609" class="wp-caption-text">华埠居民表示，设计师Kwong Von Glinow的“龙凤”（Dragon Phoenix）作品，更能体现华埠的文化特征。（Kwong Von Glinow Design Office提供）</figcaption></figure>
+<p>“唐人街之道”地标雕塑位置在坚尼路（Canal St.）和巴士打街（Baxter St.）交口处的三角地，广征设计作品，试图以地标建筑带动当地经济和观光发展。日前<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>市交通局城市设计主任Neil Gagliardi介绍，该项目征稿有五点要求，包括成为华埠地标、表现移民文化、提供社区资讯、提供绿地及成为社交场所等。</p>
 <p>从设计主任的要求来看，“龙吟”的设计似乎不太相关，日前的公布会议上，许多华埠居民也反应从该设计并没有看到与华人移民的历史，或中华传统文化有何联系。更有当地居民说，该设计未看到为民众考虑的休闲遮阳空间。</p>
 <p>陈家龄认为，华裔建筑师Lindy Lee设计的“龙吟”概念上具有误导性，从市交通局释出的资料来看，该设计的概念方法（conceptual approach），引用意大利钟楼（Italian Campanile）和中国鼓楼（Chinese Drum Tower）的概念，但呈现出来设计样貌似乎与中国鼓楼搭不上边。</p>
 <p>他说在参加圆桌会议之前他得到了82件征稿中的30件设计渲染图，发现了一些设计更适合唐人街的历史和文化。例如设计师Kwong Von Glinow的“龙凤”（Dragon Phoenix）作品，最能体现华埠的文化特征。</p>
@@ -20,42 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/19/7/10/n11375295.md#1">华埠“龙吟”地标设计 华人看不懂</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/19/7/12/n11380128.md#1">唐人街“龙吟”新地标 于金山全力支持</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/19/7/17/n11389534.md#1">华埠新地标 第一社委会支持率低</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/19/7/23/n11403176.md#1">阻止“龙吟”雕塑 华社发起联署</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/11/n12177059.md#1">华裔商家怕撤警 “那谁还敢开店？”</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/11/n12177066.md#1">中华公所将在两个周五派发免费口罩</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/11/n12177068.md#1">社区看板：华策会免费建筑学徒在线课程招生</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/11/n12177070.md#1">纽约百年来十场大运动带来的变化（下）</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/11/n12177081.md#1">纽约教育局总监提学校秋季开学关键点</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/11/n12177083.md#1">纽约总检任命新顾问调查警队执法</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/10/n11375295.md#1">华埠“龙吟”地标设计 华人看不懂</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/12/n11380128.md#1">唐人街“龙吟”新地标 于金山全力支持</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/17/n11389534.md#1">华埠新地标 第一社委会支持率低</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/23/n11403176.md#1">阻止“龙吟”雕塑 华社发起联署</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753187.md#1">香港禁发声 纽约港人接力纪念六四</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753203.md#1">报告：亚当斯治下 拦截搜身增两成</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753202.md#1">警察：布碌崙千禧高中学生威胁校园大规模枪杀</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753204.md#1">活动：宋志刚教授主讲“歌剧精彩曲调欣赏”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753205.md#1">纽约华裔退伍军人会第78届就职典礼</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753225.md#1">寓教于“乐”纽约青少年交响乐偕励馨关怀青少年</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/13/n10479888.md#1" target="_blank">王锐：“儿童政治犯”的故事</a></li><li><a href="https://github.com/fznrt2606/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015819.md#1" target="_blank">文武：中共篡政（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12172382.md#1">中共多架苏恺30战机入侵 台湾空军驱离</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12174102.md#1">罢韩没过法定门槛？网红讽“韩粉式数学”</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12173575.md#1">郝海东与蔡霞狠批中共 当局严防民众效仿</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12173986.md#1">中共逼迫汇丰和英国 蓬佩奥发声明强硬回击</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12174112.md#1">李克强提“地摊经济”中共地方表态现分裂</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12171270.md#1">韩国瑜遭罢免后狂呛人 张雅琴：跟共产党真像</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12171460.md#1">郝海东效应？导演微博谈足球先生当总统遭禁</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12170284.md#1">吴尊补办延迟16年婚礼 见太太穿婚纱哽咽落泪</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12170990.md#1">韩国瑜遭高票罢免 黄明志：这是我眼中的台湾</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/10/n12174687.md#1">明道认了当爸 去年登记甜娶王婷萱</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12169940.md#1">作恶太多 康生曹轶欧夫妇生前遭索命</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12169544.md#1">西班牙特殊小镇 完全被法国领土包围</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/5/23/n12131409.md#1">【馨香雅句】山川异域 风月同天 背后的故事</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/5/26/n12137106.md#1">楚昭越姬  为何不说山盟海誓？</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/15/8/3/n4494980.md#1">曾参劝妻守诚</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fznrt2606/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fznrt2606/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/24/n11608607.htm">纽约另有比“龙吟”更适合华埠的地标雕塑</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/24/n11608607.htm">纽约另有比“龙吟”更适合华埠的地标雕塑</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fznrt2606/djy/blob/master/gb/19/10/24/n11608607.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fznrt2606/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fznrt2606/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fznrt2606/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/10/24/n11608607.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
